--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     {
       "locator": "https://github.com/apache/cordova-plugin-whitelist.git",
       "id": "cordova-plugin-whitelist"
-    }
+    },
+    "cordova-plugin-google-analytics@0.7.1"
   ],
   "cordovaPlatforms": [
     "ios"
